--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: cachix/install-nix-action@v21
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          install_url: "https://releases.nixos.org/nix/nix-2.16.1/install"
 
       - name: Set up cachix
         uses: cachix/cachix-action@v12
