--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "btrfs-restore"
+name = "btrfs-rollback"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "btrfs-restore"
+name = "btrfs-rollback"
 path = "src/main.rs"
 
 [dependencies]
